--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.instagram.com/paulo_brittto">Paulo Brito</a>.
+    Coded by <a href="https://www.instagram.com/paulo_brittto" target="_blank">Paulo Brito</a>.
   </div>
 </body>
 </html>
